Move JMH test classes